--- a/.github/workflows/generic-amd64.yml
+++ b/.github/workflows/generic-amd64.yml
@@ -56,5 +56,6 @@ jobs:
         {
           "test_suite": ["os","cloud","hup"],
           "environment": ["bm.balena-dev.com"],
-          "worker_type": ["qemu"]
+          "worker_type": ["qemu"],
+          "runs_on": [["self-hosted", "X64", "kvm"]]
         }
