--- a/.github/workflows/generic-amd64.yml
+++ b/.github/workflows/generic-amd64.yml
@@ -53,21 +53,8 @@ jobs:
       device-repo-ref: master
       # Use qemu workers for testing
       test_matrix: >
-        [
-          {
-            "test_suite": "os",
-            "environment": "bm.balena-dev.com",
-            "worker_type": "qemu"
-          },
-          {
-            "test_suite": "cloud",
-            "environment": "bm.balena-dev.com",
-            "worker_type": "qemu",
-            "test_org": "testbot"
-          },
-          {
-            "test_suite": "hup",
-            "environment": "bm.balena-dev.com",
-            "worker_type": "qemu"
-          },
-        ]
+        {
+          "test_suite": ["os","cloud","hup"],
+          "environment": ["bm.balena-dev.com"],
+          "worker_type": ["qemu"]
+        }
