--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -88,6 +88,8 @@ on:
         required: false
         type: boolean
         default: ${{ github.event_name == 'push' }} # This determines if we want to check the results of the merge PR - we only want to do it when a new tag is made
+      # FIXME: remove this input and set "test_matrix: {}" to skip tests. The open PR event type check can be moved to the job conditions.
+      # Additionally, we may want to change the default test_matrix to {} and make tests opt-in.
       run-tests:
         required: false
         type: boolean
@@ -118,25 +120,38 @@ on:
       # - worker_type: The worker type to use for testing. The valid worker types are `qemu` and `testbot`. The default worker type is `testbot`
       # - worker_fleets: The testbot fleets for finding available Leviathan workers. Not used for QEMU workers. Can accept a list of apps separated by commas, no spaces in between
       # - test_org: The organization to use for testing cloud functionality. This default org is `testbot`
+      # To use specific settings for each test job, create an include array like this...
+      # {"include": [
+      #   {
+      #     "test_suite": "os",
+      #     "environment": "bm.balena-dev.com"
+      #   },
+      #   {
+      #     "test_suite": "cloud",
+      #     "environment": "balena-cloud.com",
+      #     "worker_type": "qemu"
+      #   },
+      #   {
+      #     "test_suite": "hup",
+      #     "environment": "balena-cloud.com",
+      #     "worker_type": "qemu"
+      #   }
+      # ]}
+      # Otherwise for a combinatorial matrix (the default) just provide values like this to have the matrix expanded...
+      # {
+      #   "test_suite": ["os","cloud","hup"],
+      #   "environment": ["bm.balena-dev.com"],
+      #   "worker_type": ["qemu","testbot"]
+      # }
       test_matrix:
-        description: "JSON Leviathan test matrix to use for testing. If not provided, the default test matrix will be used."
+        description: "JSON Leviathan test matrix to use for testing. If not provided, the default testbot matrix will be used."
         required: false
         type: string
         default: >
-          [
-            {
-              "test_suite": "os",
-              "environment": "bm.balena-dev.com"
-            },
-            {
-              "test_suite": "cloud",
-              "environment": "bm.balena-dev.com"
-            },
-            {
-              "test_suite": "hup",
-              "environment": "bm.balena-dev.com"
-            },
-          ]
+          {
+            "test_suite": ["os","cloud","hup"],
+            "environment": ["bm.balena-dev.com"]
+          }
 
 # https://docs.github.com/en/actions/using-jobs/using-concurrency
 concurrency:
@@ -952,8 +967,7 @@ jobs:
 
     strategy:
       fail-fast: false
-      matrix:
-        include: ${{ fromJSON(inputs.test_matrix) }}
+      matrix: ${{ fromJSON(inputs.test_matrix) }}
 
     env:
       # Variables provided via the selected GitHub environment
