Simplify check for secure boot
We were previously introducing a variable that was essentially
replicating the contents of an input. This commit makes use of the input
directly.

Incidentally, the previous code also had a small bug/typo, in which we
mixed a test for string length with a test for string equality.

Signed-off-by: Leandro Motta Barros <leandro@balena.io>
Change-type: patch

--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -602,15 +602,6 @@ jobs:
       # hostapp Deploy
       ##############################
 
-      - name: Set SECURE_BOOT_FEATURE_FLAG
-        if: inputs.deploy-hostapp == true
-        run: |
-          if [ -n "${{ inputs.sign-image }}" = "true" ]; then
-            echo "SECURE_BOOT_FEATURE_FLAG=yes" >> $GITHUB_ENV
-          else
-            echo "SECURE_BOOT_FEATURE_FLAG=no" >> $GITHUB_ENV
-          fi
-
       - name: Check Balena CLI installation
         run: |
           balena --version
@@ -661,7 +652,7 @@ jobs:
 
           if [ -f "${WORKSPACE}/balena.yml" ]; then
             echo -e "\nversion: ${VERSION}" >> "${WORKSPACE}/balena.yml"
-            if [ "${SECURE_BOOT_FEATURE_FLAG}" = "yes" ]; then
+            if [ "${{ inputs.sign-image }}" = "true" ]; then
               sed -i '/provides:/a \  - type: sw.feature\n    slug: secureboot' "/${WORKSPACE}/balena.yml"
             fi
           fi
