Fix parsing of empty test matrix
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -987,7 +987,7 @@ jobs:
     strategy:
       fail-fast: false
       # If test matrix is empty, skip the job by providing an empty object
-      matrix: ${{ fromJSON(inputs.test_matrix) || '{}' }}
+      matrix: ${{ fromJSON(inputs.test_matrix || '{}') }}
 
     env:
       # Variables provided via the selected GitHub environment
